manifests/go-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: go-web-app
spec:
  type: NodePort
  selector:
    app: go-web-app
  ports:
    - port: 80
      targetPort: 8080
      nodePort: 30786
